<resources>
    <string name="app_name">Quiz Application</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_post_question">PostQuestionActivity</string>
    <string name="title_activity_questions">QuestionsActivity</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="browse_completed_quizes">Browse Completed Quizes</string>
    <string name="level_1_general">Level 1 (General)</string>
    <string name="categories">Categories</string>
    <string name="google_a_c">Google A/c</string>
    <string name="bookmarks">Bookmarks</string>
    <string name="post_questions">Post questions</string>
    <string name="progress">Progress</string>

    <string-array name="categ">
        <item>General Knowledge</item>
        <item>Entertainment: Books</item>
        <item>Entertainment: Film</item>
        <item>Entertainment: Music</item>
        <item>Entertainment: Musicals, Theatres</item>
        <item>Entertainment: Television</item>
        <item>Entertainment: Video Games</item>
        <item>Entertainment: Board Games</item>
        <item>Science, Nature</item>
        <item>Science: Computers</item>
        <item>Science: Mathematics</item>
        <item>Mythology</item>
        <item>Sports</item>
        <item>Geography</item>
        <item>History</item>
        <item>Politics</item>
        <item>Art</item>
        <item>Celebrities</item>
        <item>Animals</item>
        <item>Vehicles</item>
        <item>Entertainment: Comics</item>
        <item>Science: Gadgets</item>
        <item>Entertainment: Japanese Anime, Manga</item>
        <item>Entertainment: Cartoon, Animations</item>
    </string-array>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
</resources>
